<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainPage</class>
 <widget class="QDialog" name="MainPage">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1027</width>
    <height>660</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QPushButton" name="pushButton_Signup">
   <property name="enabled">
    <bool>true</bool>
   </property>
   <property name="geometry">
    <rect>
     <x>602</x>
     <y>100</y>
     <width>131</width>
     <height>29</height>
    </rect>
   </property>
   <property name="statusTip">
    <string/>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: blue;
color: white;</string>
   </property>
   <property name="text">
    <string>Signup</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_Logo">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>0</y>
     <width>261</width>
     <height>71</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="pixmap">
    <pixmap>../../../Image/LibraryLogo.jpg</pixmap>
   </property>
  </widget>
  <widget class="QLabel" name="label_LibraryPic">
   <property name="geometry">
    <rect>
     <x>30</x>
     <y>160</y>
     <width>481</width>
     <height>211</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="pixmap">
    <pixmap>../../../Image/MicrosoftTeams-image.png</pixmap>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButton_ReturnBook">
   <property name="geometry">
    <rect>
     <x>718</x>
     <y>440</y>
     <width>131</width>
     <height>29</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: blue;
color: white;</string>
   </property>
   <property name="text">
    <string>Return Book ?</string>
   </property>
  </widget>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>520</x>
     <y>130</y>
     <width>301</width>
     <height>261</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>Arial</family>
     <pointsize>12</pointsize>
     <bold>false</bold>
    </font>
   </property>
   <property name="text">
    <string>Welcome to our library !!!

The motto of our library is to provide quiet
 and happy atmosphere to everyone and
especislly to students for focusing on their studies.

Use our printer option for printing and
scan the documents.

You can become a member of our Library !!</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_Facebook">
   <property name="geometry">
    <rect>
     <x>40</x>
     <y>550</y>
     <width>63</width>
     <height>51</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="pixmap">
    <pixmap>../../../Image/facebook.png</pixmap>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButton_ContactUs">
   <property name="geometry">
    <rect>
     <x>520</x>
     <y>430</y>
     <width>141</width>
     <height>29</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: blue;
color: white;</string>
   </property>
   <property name="text">
    <string>Contact Us</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_Youtube">
   <property name="geometry">
    <rect>
     <x>180</x>
     <y>550</y>
     <width>63</width>
     <height>51</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="pixmap">
    <pixmap>../../../Image/youtube.png</pixmap>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButton_RenewBook">
   <property name="geometry">
    <rect>
     <x>720</x>
     <y>390</y>
     <width>131</width>
     <height>29</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: blue;
color: white;</string>
   </property>
   <property name="text">
    <string>Renew Book ?</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="lineEdit_SearchBar">
   <property name="geometry">
    <rect>
     <x>342</x>
     <y>60</y>
     <width>231</width>
     <height>26</height>
    </rect>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButton_Login">
   <property name="geometry">
    <rect>
     <x>602</x>
     <y>60</y>
     <width>131</width>
     <height>29</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QPushButton{
qproperty-icon: url(:/user.png);
qproperty-iconSize: 26px 26px;
text-align: center;
color: white;
background-color: blue;
}</string>
   </property>
   <property name="text">
    <string>Login</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButton_Infomation">
   <property name="geometry">
    <rect>
     <x>520</x>
     <y>470</y>
     <width>141</width>
     <height>29</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: blue;
color: white;</string>
   </property>
   <property name="text">
    <string>Information</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButton_AboutUs">
   <property name="geometry">
    <rect>
     <x>520</x>
     <y>390</y>
     <width>141</width>
     <height>29</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: blue;
color: white;</string>
   </property>
   <property name="text">
    <string>About Us</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_Twitter">
   <property name="geometry">
    <rect>
     <x>260</x>
     <y>550</y>
     <width>63</width>
     <height>51</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="pixmap">
    <pixmap>../../../Image/twitter.png</pixmap>
   </property>
  </widget>
  <widget class="QLabel" name="label_2">
   <property name="geometry">
    <rect>
     <x>110</x>
     <y>550</y>
     <width>61</width>
     <height>51</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="pixmap">
    <pixmap>../../../Image/instagram.png</pixmap>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
